fix about me section alignment

--- a/src/styles/sass/about.scss
+++ b/src/styles/sass/about.scss
@@ -33,7 +33,6 @@
 }
 
 .menu {
-  height: 625px;
   flex: 1;
   margin-left: 2rem;
 }
